change password
fix #492
